# devprofile

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  cline_task_sep-7-2025_9-51-47-pm.md  eslint.config.js  log.md  migrate.py  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  workflow.config.js
cv-inferencer/: builder.py  config.yaml  dataset_builder.py  fine_tune.py  pyproject.toml  qa_data.jsonl  requirements.txt  test.py
database/migrations/: setup.js
database/schemas/: alert_rules.sql  analytics_events.sql  audit_logs.sql  consent_settings.sql  init.sql  security_alerts.sql  user_sessions.sql
memory-bank/: activeContext.md  debugging-techniques.md  features.md  intelli-insights-spec.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
plans/: caching-strategy-plan.md
public/: manifest.json  offline.html  sw.js
scripts/: calculate-hashes.ts  generate-pdf.tsx  generate-sw-version.mjs
src/app/: _appp.tsx  _documentt.tsx  actions.ts  ama.tsx  cv.tsx  flags.ts  layout.tsx  page.tsx  quick-cv-actions.tsx
src/components/: AICHAT.tsx  AIDrawer.tsx  AISmartHighlight.tsx  About.tsx  Contact.tsx  DocumentSidebar.tsx  DocumentViewer.tsx  Experience.tsx  Footer.tsx  Header.tsx  Hero.tsx  Icons.tsx  Projects.tsx  Skills.tsx  SocialLinks.tsx  Timeline.tsx  XIcon.tsx  about.tsx  accomplishments.tsx  ai-chat.tsx  ai-smart-highlight.tsx  contact.tsx  cv-document.tsx  document-sidebar.tsx  document-viewer.tsx  experience.tsx  footer.tsx  header.tsx  hero.tsx  (+10 more)
(+107 files in other folders)
