[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-inferencer"
version = "0.1.0"
description = "CV Inference and Fine-tuning Project"
dependencies = [
    "transformers>=4.21.0",
    "datasets>=2.0.0",
    "torch>=1.9.0",
    "accelerate>=0.12.0"
]

[tool.setuptools]
packages = []